# Evaluator

./: evaluator.py  pyproject.toml
.github/workflows/: LintAndTest.yml
