[project]
name = "evaluator"
version = "0.0.1"
description = "A mathematical expression evaluator."
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
select = ["ALL"]
ignore = ["T201", # Allow print for this basic example
          "PLR0911", # This is too pedantic and discourages early exit
          "ERA001" # Allow code to be commented out. Expressions in comments are seen as code.
] 

[tool.mypy]
python_version = "3.10"
strict = true
